working mutations